# nvim-completion

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix  install.sh  rustfmt.toml
compleet-client/: Cargo.toml
compleet-client/neovim/: Cargo.toml
compleet-client/neovim/src/: lib.rs
compleet-client/src/: client.rs  constants.rs  lib.rs  setup.rs  state.rs  utils.rs  utils.rs.orig
compleet-client/src/autocmds/: augroup.rs  mod.rs  on_buf_enter.rs  on_bytes.rs  on_cursor_moved_i.rs  on_insert_leave.rs  setup.rs  try_buf_attach.rs
compleet-client/src/bindings/: mod.rs
compleet-client/src/channel/: README.md  channel.rs  handle_notify.rs  message.rs  mod.rs  on_bytes.rs  on_exit.rs  on_stderr.rs
compleet-client/src/client/: attach_error.rs  client.rs  lateinit.rs  mod.rs
compleet-client/src/commands/: README.md  compleet_start.rs  compleet_stop.rs  mod.rs  setup.rs
compleet-client/src/hlgroups/: mod.rs  setup.rs  setup_error_msg.rs
compleet-client/src/mappings/: insert_completion.rs  select_completion.rs  setup.rs  show_completions.rs
compleet-client/src/messages/: echoes.rs  hlgroups.rs  mod.rs
compleet-client/src/settings/: completion.rs  settings.rs  sources.rs
compleet-client/src/ui/: README.md  buffer.rs  cleanup.rs  details.rs  floater.rs  hint.rs  menu.rs  mod.rs  ui.rs  update.rs
compleet-common/: Cargo.toml
compleet-common/src/: bridge.rs  completion_item.rs  completion_source.rs  cursor.rs  lib.rs  neovim.rs  request.rs  signal.rs
compleet-common/src/lsp/: client.rs  lsp_client.rs  lsp_result.rs  method.rs  mod.rs  protocol.rs
compleet-core/: Cargo.toml
compleet-core/src/: buffer.rs  client.rs  completion_bundle.rs  completion_context.rs  completion_item.rs  completion_source.rs  config.rs  cursor.rs  edit.rs  error.rs  hlgroups.rs  lateinit.rs  lib.rs  main_cb.rs  messages.rs  on_bytes.rs  on_completions_arrival.rs  setup.rs  sources_pool.rs
compleet-core/src/autocmds/: attach_to_buffer.rs  buf_enter.rs  buf_new.rs  cursor_moved_i.rs  insert_leave.rs  mod.rs  on_buf_new.rs  on_insert_leave.rs  setup.rs  vim_resized.rs
compleet-core/src/channels/: mod.rs  setup.rs
compleet-core/src/commands/: compleet_start.rs  compleet_stats.rs  compleet_stop.rs  mod.rs  setup.rs
compleet-core/src/completions/: completion_config.rs  completion_item.rs  completion_request.rs  completion_state.rs  mod.rs
compleet-core/src/config/: completion_config.rs  config.rs  mod.rs  sources.rs  ui_config.rs
compleet-core/src/mappings/: accept_completion.rs  mod.rs  scroll_details.rs  select_completion.rs  setup.rs  show_completions.rs
compleet-core/src/pipeline/: main_cb.rs  sources_pool.rs
compleet-core/src/sources/: mod.rs
compleet-core/src/threads/: mod.rs  setup.rs  thread_main.rs  thread_pool.rs
compleet-core/src/ui/: completion_hint.rs  completion_item_details.rs  completion_menu.rs  mod.rs  ui.rs  ui_config.rs  ui_state.rs
compleet-plugin/: Cargo.toml
compleet-plugin/src/: lib.rs
compleet-server/: Cargo.toml
compleet-server/src/: completion.rs  cursor.rs  lib.rs  main.rs  source.rs
compleet-server/src/api/: handle_message.rs  mod.rs
compleet-server/src/handlers/: mod.rs  notification.rs  request.rs  response.rs
compleet-server/src/rpc/: decode.rs  decoding_error.rs  encode.rs  message.rs  mod.rs
compleet-server/src/sources/: lipsum.rs  mod.rs
compleet-sources/: Cargo.toml
compleet-sources/compleet-lipsum/: Cargo.toml
compleet-sources/compleet-lipsum/src/: compleet_lipsum.rs  lib.rs
compleet-sources/compleet-lsp/: Cargo.toml
compleet-sources/compleet-lsp/src/: compleet_lsp.rs  lib.rs
compleet-sources/src/: completion.rs  completion_builder.rs  completion_context.rs  completion_item.rs  completion_source.rs  cursor.rs  error.rs  lib.rs  result.rs  treesitter.rs
compleet-sources/src/lipsum/: config.rs  lipsum.rs  lipsum.rs.orig  lorems.rs
compleet-sources/src/lsp/: completion_params.rs  config.rs  constants.rs  hlgroups.rs  lsp.rs  make_completion_params.rs  mod.rs  other.rs  setup.rs  treesitter.rs
compleet-sources/src/sources/: completion_source.rs  mod.rs  valid_source.rs
completion-client/: Cargo.toml
completion-client/src/: client.rs  completion_item_ext.rs  document_ext.rs  error.rs  hlgroups.rs  lateinit.rs  lib.rs  position_ext.rs  setup.rs  source_bundle_ext.rs  utils.rs
completion-client/src/autocmds/: attach_to_buffer.rs  mod.rs  on_buf_new.rs  on_cursor_moved_i.rs  on_insert_leave.rs  on_vim_resized.rs  setup.rs
completion-client/src/commands/: completion_stats.rs  mod.rs  setup.rs
completion-client/src/config/: config.rs  mod.rs  sources_config.rs
completion-client/src/mappings/: mod.rs  select_completion.rs  setup.rs
completion-client/src/ui/: completion_details.rs  completion_hint.rs  completion_menu.rs  config.rs  geometry.rs  mod.rs  ui_state.rs  utils.rs
completion-core/: Cargo.toml
completion-core/src/: buffer.rs  client.rs  config.rs  error.rs  hlgroups.rs  lateinit.rs  lib.rs  messages.rs  position_ext.rs  setup.rs  sorter.rs  source_bundle_ext.rs  start.rs  state.rs  utils.rs
completion-core/src/autocmds/: mod.rs  on_insert_leave.rs  on_vim_resized.rs  setup.rs
completion-core/src/commands/: completion_start.rs  completion_stop.rs
completion-core/src/completions/: completion_context.rs  completion_item.rs  completion_request.rs  completion_state.rs  mod.rs
completion-core/src/sources/: mod.rs  (+4 more)
completion-plugin/: Cargo.toml
completion-plugin/src/: lib.rs
completion-sources/lipsum/: Cargo.toml  build.rs  words.txt
completion-sources/lsp/: Cargo.toml
completion-sources/runtime/: Cargo.toml
completion-types/: Cargo.toml
completion-types/src/: client_message.rs  clock.rs  completion_item.rs  completion_list.rs  completion_source.rs  core_message.rs  document.rs  lib.rs  position.rs  resolved_properties.rs  revision.rs  scored_completion.rs  source_bundle.rs  source_enable.rs
nvim-bindings/: Cargo.toml
nvim-bindings/src/: lib.rs
treesitter-highlighter/: Cargo.toml  build.rs
treesitter-highlighter/src/: constants.rs  highlighter.rs  lib.rs
(+253 files in other folders)
