[package]
name = "compleet"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"
description = "A Neovim autocompletion framework written in Rust"
repository = "https://github.com/noib3/nvim-compleet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.2"
mlua = { version = "0.7.3", features = ["luajit", "vendored", "module"] }
