[package]
name = "compleet"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"
description = "A Neovim autocompletion framework written in Rust"
repository = "https://github.com/noib3/nvim-compleet"

[lib]
crate-type = ["cdylib"]

# Use async functions in traits.
[dependencies.async-trait]
version = "0.1"

# Rust bindings to Lua.
[dependencies.mlua]
version = "0.7"
features = ["async", "luajit", "vendored", "module", "serialize"]

# Bindings to Neovim's `vim.*` Lua table.
[dependencies.neovim]
path = "./neovim"

# Better `Mutex`es.
[dependencies.parking_lot]
version = "0.10"

# Used to deserialize the Lua table passed to `require('compleet').setup`.
[dependencies.serde]
version = "1.0"
features = ["derive"]

# Used to get the path of the config option that caused a deserialization
# error.
[dependencies.serde_path_to_error]
version = "0.1"

# Async runtime.
[dependencies.tokio]
version = "1.17.0"
features = ["full"]

# Sacrifice compilation speed for runtime performance.
[profile.release]
lto = "fat"
codegen-units = 1
