[package]
name = "compleet-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.sources]
path = "../compleet-sources"

[dependencies.nix]
version = "0.23.1"

# Rust bindings to Lua
[dependencies.mlua]
version = "0.7"
features = ["luajit", "vendored", "module", "serialize"]

# Better `Mutex`es.
[dependencies.parking_lot]
version = "0.10"

# Used to deserialize the Lua table passed to `require('compleet').setup`.
[dependencies.serde]
version = "1.0"
features = ["derive"]

# Used to get the path of the config option that caused a deserialization
# error.
[dependencies.serde_path_to_error]
version = "0.1"

# Async runtime.
[dependencies.tokio]
version = "1.17.0"
features = ["full"]
