[package]
name = "compleet-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

bindings = { path = "../nvim-bindings" }
sources = { path = "../compleet-sources" }

# Rust bindings to Lua
mlua = { version = "0.7", features = ["luajit", "vendored", "module", "serialize"] }

# Better `Mutex`es.
parking_lot = "0.10"

# Used to deserialize the Lua table passed to `require('compleet').setup`.
serde = { version = "1.0", features = ["derive"] }

# Used to get the path of the config option that caused a deserialization
# error.
serde_path_to_error = "0.1"

# Async runtime.
tokio = { version = "1.17.0", features = ["full"] }
