[package]
name = "compleet-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.bindings]
path = "../nvim-bindings"

[dependencies.once_cell]
version = "1.10"

[dependencies.mlua]
version = "0.7"
features = ["luajit", "vendored", "module", "serialize"]

[dependencies.parking_lot]
version = "0.10"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_path_to_error]
version = "0.1"

[dependencies.sources]
path = "../compleet-sources"

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1.17"
featues = ["full"]
