[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies.bindings]
path = "../nvim-bindings"

# Use async functions in traits.
[dependencies.async-trait]
version = "0.1"

# Rust bindings to Lua
[dependencies.mlua]
version = "0.7"
features = ["luajit", "vendored", "macros", "serialize"]

[dependencies.os_pipe]
version = "1.0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

# Async runtime.
[dependencies.tokio]
version = "1.17.0"
features = ["full"]
