[package]
name = "compleet"
version = "0.1.0"
edition = "2021"

# Use async functions in traits.
[dependencies.async-trait]
version = "0.1"

# Better `Mutex`es.
[dependencies.parking_lot]
version = "0.10"

# (De)serialize MessagePack values.
[dependencies.rmp-serde]
version = "1.0.0"

# A MessagePack value.
[dependencies.rmpv]
version = "1.0.0"
features = ["with-serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

# Async runtime.
[dependencies.tokio]
version = "1.17.0"
features = ["full"]
