[package]
name = "sources"
version = "0.1.0"
edition = "2021"

# Use async functions in traits.
[dependencies.async-trait]
version = "0.1"

[dependencies.bindings]
path = "../nvim-bindings"

[dependencies.serde]
version = "1.0"
features = ["derive"]

# Async runtime.
[dependencies.tokio]
version = "1.17.0"
features = ["full"]
