[package]
name = "sources"
version = "0.1.0"
edition = "2021"

# Use async functions in traits.
[dependencies.async-trait]
version = "0.1"

[dependencies.bindings]
path = "../nvim-bindings"

[dependencies.mlua]
version = "0.7"
features = ["luajit", "vendored"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

# Async runtime.
[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.unicode-segmentation]
version = "1.9.0"

[dependencies.tree-sitter]
version = "0.20.6"

[dependencies.tree-sitter-highlight]
version = "0.20.1"

[dependencies.tree-sitter-rust]
version = "0.20.1"
