[package]
name = "sources"
version = "0.1.0"
edition = "2021"

# Use async functions in traits.
[dependencies.async-trait]
version = "0.1"

[dependencies.treesitter-highlighter]
path = "../treesitter-highlighter"

[dependencies.mlua]
version = "0.7"
features = ["luajit", "vendored"]

# Async runtime.
[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.unicode-segmentation]
version = "1.9.0"

# Used to get URIs from filepaths.
[dependencies.url]
version = "2.2.2"

# For UTF-32 encoded strings.
[dependencies.widestring]
version = "0.5.1"

[dependencies]
futures = "0.3"
bindings = { path = "../nvim-bindings" }
serde = { version = "1.0", features = ["derive"] }
