[package]
name = "completion-core"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3.23"
fuzzy-matcher = "0.3"
completion-types = { path = "../completion-types", features = ["core"] }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", features = ["loop"] }
tokio = { version = "1.20", features = ["full"] }
