[package]
name = "nvim-completion"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
completion-client = { path = "../completion-client" }
completion-lipsum = { path = "../completion-sources/lipsum" }
completion-lsp = { path = "../completion-sources/lsp" }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi" }
