[package]
name = "nvim-completion"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
neovim-0-8 = [
  "completion-client/neovim-0-8",
  "completion-lsp/neovim-0-8",
  "nvim-oxi/neovim-0-8"
]
neovim-nightly = [
  "completion-client/neovim-nightly",
  "completion-lsp/neovim-nightly",
  "nvim-oxi/neovim-nightly"
]

[dependencies]
completion-client = { path = "../completion-client" }
completion-lipsum = { path = "../completion-sources/lipsum" }
completion-lsp = { path = "../completion-sources/lsp" }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi" }
