[package]
name = "compleet-lsp"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
compleet-core = { path = "../../compleet-core" }
# nvim-oxi = { git = "https://github.com/noib3/nvim-oxi" }
serde = { version = "1.0", features = ["derive"] }
nvim-oxi = { path = "../../../nvim-oxi/nvim-oxi" }
