[package]
name = "completion-runtime"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
async-trait = "0.1"
completion-types = { path = "../../completion-types" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
